--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -1,7 +1,8 @@
 .contactSection {
   width: 100%;
-  padding: 3rem 0;
+  padding: 1rem 0 3rem 0;
   background-color: #fff;
+  display: flow-root;
 }
 
 .container {
